src/objects/ADvendio__SiteAdTypeAssignment__c.object
<CustomObject>
    <description>This object is used to define, which Ad Types are allowed on which Sites.</description>
    <fields>
        <fullName>ADvendio__AdType__c</fullName>
        <description>This field shows the related Ad Type.</description>
        <inlineHelpText>This field shows the related Ad Type.</inlineHelpText>
        <label>Ad Type</label>
        <referenceTo>ADvendio__Ad_Type__c</referenceTo>
        <relationshipLabel>Assigned Sites</relationshipLabel>
        <relationshipName>SiteAdTypeAssignments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ADvendio__Site__c</fullName>
        <description>This field shows the related Site.</description>
        <inlineHelpText>This field shows the related Site.</inlineHelpText>
        <label>Site</label>
        <referenceTo>ADvendio__Site__c</referenceTo>
        <relationshipLabel>Assigned Ad Types</relationshipLabel>
        <relationshipName>SiteAdTypeAssignments</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ADvendio__UniqueKey__c</fullName>
        <description>Enter a UniqueKey (recommended: syntax) for this site and ad type assignment.</description>
        <externalId>true</externalId>
        <inlineHelpText>Enter a UniqueKey (recommended: syntax) for this site and ad type assignment.</inlineHelpText>
        <label>Unique Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Site Ad Type Assignment</label>
    <listViews>
        <fullName>ADvendio__All</fullName>
        <columns>NAME</columns>
        <columns>ADvendio__AdType__c</columns>
        <columns>ADvendio__Site__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SAT-{000000}</displayFormat>
        <label>Site Ad Type Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Site Ad Type Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>